2.65a - Cycles and OSL - displacement works only with OSL + crashes #33662

Closed
opened 2012-12-23 01:41:56 +01:00 by Carlo Lopez · 10 comments

%%%System:
CPU: Intel Core i5
RAN: 6 Gb DDR3 RAM
GPU: Asus ENGTS450 DirectCU (RAM 1 Gb GDDR5)
OS: Windows 7 Ultimate x64

Blender: official 2.65a release

The displacement doesn't work with GPU rendering, either during preview, either for rendering.
It works fine with various previous builds wich was stable for me (various 2.6 builds from graphicall).
I tried also the 'normal' input node for the shaders, but the displacement works only with OSL enabled (so with CPU).

Also, sometimes the shaders doesn't works (with GPU rendering) and I see a diffuse violet shader (like when an image texture is missing), and again everything works well if I switch to OSL (even if I swith to CPU but without enabling OSL).

Last, sometimes Blender crashes during GPU rendering (also in preview) causing a black screen and a message from nVidia driver wich says that the OpenGL has been restarted.

I'm talking about simple scenes with a cube with a 1024 texture, sky texture and sometimes AO.%%%

%%%System: CPU: Intel Core i5 RAN: 6 Gb DDR3 RAM GPU: Asus ENGTS450 DirectCU (RAM 1 Gb GDDR5) OS: Windows 7 Ultimate x64 Blender: official 2.65a release The displacement doesn't work with GPU rendering, either during preview, either for rendering. It works fine with various previous builds wich was stable for me (various 2.6 builds from graphicall). I tried also the 'normal' input node for the shaders, but the displacement works only with OSL enabled (so with CPU). Also, sometimes the shaders doesn't works (with GPU rendering) and I see a diffuse violet shader (like when an image texture is missing), and again everything works well if I switch to OSL (even if I swith to CPU but without enabling OSL). Last, sometimes Blender crashes during GPU rendering (also in preview) causing a black screen and a message from nVidia driver wich says that the OpenGL has been restarted. I'm talking about simple scenes with a cube with a 1024 texture, sky texture and sometimes AO.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Please always attach a .blend file and exact steps for us to redo the problem. If something doesn't work 'sometimes' that's not enough information for us to investigate, it really needs to be exact.

Note that issues with features available after enabling Experimental are not considered bugs:
http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Cycles/Experimental_Features

http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Cycles/Nodes/OSL
http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Cycles/GPU_Rendering
%%%

%%%Please always attach a .blend file and exact steps for us to redo the problem. If something doesn't work 'sometimes' that's not enough information for us to investigate, it really needs to be exact. Note that issues with features available after enabling Experimental are not considered bugs: http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Cycles/Experimental_Features http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Cycles/Nodes/OSL http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Cycles/GPU_Rendering %%%
Author

%%%Hi Brecht,

everything works fine on provious build, the problem started with 2.65 and 2.65a. I wrote 'sometimes' because I don't understood what causes the crash, however it is impossible to work with.

I will prepare a simple .blend file and attach it.

Carlo%%%

%%%Hi Brecht, everything works fine on provious build, the problem started with 2.65 and 2.65a. I wrote 'sometimes' because I don't understood what causes the crash, however it is impossible to work with. I will prepare a simple .blend file and attach it. Carlo%%%

%%%Carlo, we can not fix occasional issues, we need to know exact steps of reproducing the issue. Please provide sample .blend file, also please test builds from http://builder.blender.org/download/ where the issue could have been resolved. It could also worth testing on system console for possible error prints.%%%

%%%Carlo, we can not fix occasional issues, we need to know exact steps of reproducing the issue. Please provide sample .blend file, also please test builds from http://builder.blender.org/download/ where the issue could have been resolved. It could also worth testing on system console for possible error prints.%%%
Author

%%%Thank you Sergey. I also tried the last build (r53307) but the main problem remains the same.

Here's the blend file: http://www.pasteall.org/blend/18378 (CC-BY-NC)

The displacement works only with OSL enabled; with OSL disabled and with GPI compute, displacement doesn't works.

On previous builds it used to work (without the bump node, of course, so using output displacement and not shader's normal inputs), but now previous builds crashes if I choose rendered view or hit F12 (either CPU or GPU).

The console also crashes and I can't read what causes the crash.

How can I generate a log? %%%

%%%Thank you Sergey. I also tried the last build (r53307) but the main problem remains the same. Here's the blend file: http://www.pasteall.org/blend/18378 (CC-BY-NC) The displacement works only with OSL enabled; with OSL disabled and with GPI compute, displacement doesn't works. On previous builds it used to work (without the bump node, of course, so using output displacement and not shader's normal inputs), but now previous builds crashes if I choose rendered view or hit F12 (either CPU or GPU). The console also crashes and I can't read what causes the crash. How can I generate a log? %%%
Author

%%%I isolated the problem: http://www.pasteall.org/pic/42355

Cycles is able to handle this only with OSL (it's a 4K png); the displacement doesn't work and sometimes I see violet if I connect this texture to the color input of any shader.

I converted the map to jpg and everything works fine even without OSL enabled.

I hope this discover will help the development.

D%%%

%%%I isolated the problem: http://www.pasteall.org/pic/42355 Cycles is able to handle this only with OSL (it's a 4K png); the displacement doesn't work and sometimes I see violet if I connect this texture to the color input of any shader. I converted the map to jpg and everything works fine even without OSL enabled. I hope this discover will help the development. # D%%%

%%%Fixed a crash now enabling "True" displacement on the mesh in this .blend file. I'm not sure if that's what you were testing, it was set to Bump in the .blend file so it's not clear to me if that is crashing for you too.%%%

%%%Fixed a crash now enabling "True" displacement on the mesh in this .blend file. I'm not sure if that's what you were testing, it was set to Bump in the .blend file so it's not clear to me if that is crashing for you too.%%%
Author

%%%Thank you Bretch. I was trying different things, also true displacement (in fact as you can see, there's a subdivision surfaces modifier disabled and with subdivisions sets to 0; I was trying to heavily subdivide the mesh to achieve a true displacement but I have a lot of testing to do also comparing with the 'displace' modifier).

However I noticed that sometimes Cycles didn't recognize PNG files without OSL (I attached the file http://www.pasteall.org/pic/42355) so I resolved switching to JPG (but in this case the JPG is much larger in size and lower in quality).

Did you have an idea on what causes this?%%%

%%%Thank you Bretch. I was trying different things, also true displacement (in fact as you can see, there's a subdivision surfaces modifier disabled and with subdivisions sets to 0; I was trying to heavily subdivide the mesh to achieve a true displacement but I have a lot of testing to do also comparing with the 'displace' modifier). However I noticed that sometimes Cycles didn't recognize PNG files without OSL (I attached the file http://www.pasteall.org/pic/42355) so I resolved switching to JPG (but in this case the JPG is much larger in size and lower in quality). Did you have an idea on what causes this?%%%

%%%Hi,
I am closing this now, Displacement is not officially supported yet in Cycles.

In regards to the png issue, png files work fine for me (Windows and Linux) with OSL and without, not sure whats going on here.

If you can reproduce the PNG issue with a new build from builder.blender.org and can provide an example blend file, feel free to open a new report with the issue. :) %%%

%%%Hi, I am closing this now, Displacement is not officially supported yet in Cycles. In regards to the png issue, png files work fine for me (Windows and Linux) with OSL and without, not sure whats going on here. If you can reproduce the PNG issue with a new build from builder.blender.org and can provide an example blend file, feel free to open a new report with the issue. :) %%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33662
No description provided.