Fix part of #33662: cycles crash using displacement on meshes with vertices not attached to any face.